# Studynote

./: Ansible.md  README.md
CICD/MPS_C++/mps-master/: CMakeLists.txt  Makefile
CICD/MPS_C++/mps-master/.cid/: IVMHoloMediaProxyService.yml
CICD/MPS_C++/mps-master/cmake/: CMakeUtils.cmake
CICD/MPS_C++/mps-master/config/: config.yaml  config.yaml.tpl  logger.conf  scc.conf
CICD/MPS_C++/mps-master/dockerfile/: Dockerfile  entrypoint.sh
CICD/ams_go/ams/: .gitignore  Makefile  go.sum  main.go
deploy/inventory/alpha-master/: hosts
deploy/inventory/dev/: hosts
deploy/inventory/feature-media/: hosts
deploy/inventory/feature-protal/: inventory
deploy/inventory/feature-user/: inventory
deploy/inventory/gamma/: hosts
deploy/inventory/personal-alpha/: hosts
deploy/inventory/template/: hosts
deploy/package/: 说明.txt
deploy/tasks/: deploy.yml  init.yml  main.yml
deploy/templates/: dog.j2
deploy/vars/: main.yml
security/: badip.sh  cce.yml  checkcert.sh  clean.yml  clean_sys_log.sh  dropip.sh  ecs.yml  mian.yml  nginx.csr  nginx.key  sudo-1.9.5-3.el6.x86_64.rpm  sudo.yml
security/cce_user/files/: sysctl.conf
security/del_tools/files/: deltool.sh
security/del_tools/tasks/: main.yml
security/mount/files/: fstab
security/mount/tasks/: main.yml
security/network/tasks/: main.yml
security/network/templates/: ifcfg-eth0.j2
security/ntp/files/: resolv.conf
security/ntp/tasks/: main.yml
security/ntp/tempaltes/: ntp.conf.j2
security/ssh/tasks/: main.yml
security/ssh/templates/: sshd.config.j2
security/system/files/: audit.rules  bashrc  (+13 more)
(+21 files in other folders)
